@@ -1,5 +1,13 @@
 2006-03-08  Danilo Šegan  <danilo@gnome.org>
 
+	* teams.py: Set up /teams/ actions.
+	* templates/list-teams.tmpl: Listing of all teams.
+
+	* view-module.py: 
+	* utils.py: Added, moved TemplateInspector here.
+
+2006-03-08  Danilo Šegan  <danilo@gnome.org>
+
 	* teams.py: Import into CVS.
 
 	* gnome-modules.xml: Added glib, deskbar-applet.
